# gd-pjsk-overlay

./: .gitignore  README.md  package.json
.github/workflows/: build-mod.yml  test.yml
analyzer/: cli.js  determinism.js  heuristics.js  pipeline.js  report.js  segment.js
fixtures/: make-fixtures.js  sample.gdr.json  sample.telemetry.jsonl
mod/: CMakeLists.txt  mod.json
mod/src/: main.cpp  net.hpp  ring.hpp
renderer/: index.html
renderer/css/: app.css  tokens.css
renderer/js/: colors.js  geometry.js  highway.js  main.js  playhead.js  skin.js  ws.js
scripts/: gdr2-load-smoke.mjs  mock-tap.js  serve.js  shots.mjs  smoke.mjs  ws-smoke.mjs
shared/: binreader.js  cluster.js  gdr.js  gdr2.js  msgpack.js  notes.js  protocol.js  synth.js  telemetry.js
test/: analyzer.test.js  binreader.test.js  cluster.test.js  colors.test.js  gdr.test.js  gdr2.test.js  geometry.test.js  highway.test.js  notes.test.js  playhead.test.js  telemetry.test.js
test/helpers/: encode-gdr2.js
